public/platform/v0.4/_sources/reference/tmlt/analytics/binning_spec/index.rst.txt



*******************
binning_spec
*******************

.. py:module:: tmlt.analytics.binning_spec

.. autoapi-nested-parse::

   A BinningSpec defines a binning operation on a column.











Classes
=======

.. list-table::

   * - :class:`.BinningSpec`
     - A spec object defining an operation where values are assigned to bins.

   
.. py:class:: BinningSpec(bin_edges, names = None, right = True, include_both_endpoints = True, nan_bin = None)

   Bases: :class:`Generic[BinT, BinNameT]`

   A spec object defining an operation where values are assigned to bins.

   A BinningSpec divides values into bins based on a list of bin edges, for use
   with the :meth:`~tmlt.analytics.query_builder.QueryBuilder.bin_column`
   method. All :data:`supported data types
   <tmlt.analytics.session.SUPPORTED_SPARK_TYPES>` can be binned using a
   BinningSpec.

   Values outside the range of the provided bins, ``None`` types,
   and NaN values are all mapped to ``None`` (``null`` in Spark).
   Bin names are generated based on the bin edges, but custom names can be provided.


   .. rubric:: Examples

   >>> spec = BinningSpec([0,5,10])
   >>> spec.bins()
   ['[0, 5]', '(5, 10]']
   >>> spec(0)
   '[0, 5]'
   >>> spec(5)
   '[0, 5]'
   >>> spec(6)
   '(5, 10]'
   >>> spec(10)
   '(5, 10]'
   >>> spec(11) is None
   True






   .. automethod:: __init__
   .. py:method:: input_type(self)
      :property:

      Return the ColumnType of the column this binning can be applied to.


   .. py:method:: output_type(self)
      :property:

      Return the ColumnType that results from applying this binning.


   .. py:method:: bins(self, include_null = False)

      Return a list of all the bin names that could result from the binning.

      The returned list is guaranteed to contain unique elements, even if
      multiple bins were mapped to the same name. The NaN bin, if one was
      specified, is included. If ``include_null`` is true, the null bin is
      included as well; by default, it is not included.


   .. py:method:: __call__(self, val)

      Given a value to bin, return its bin name.

      In most cases this method only needs to be used internally, but it can
      be called on its own to test the binning that will be performed.

      :param val: The value to be assigned to a bin.






