public/platform/v0.17/_sources/reference/tmlt/analytics/binning_spec/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*******************
binning_spec
*******************

.. py:module:: tmlt.analytics.binning_spec

.. autoapi-nested-parse::

   A BinningSpec defines a binning operation on a column.









Data
====


.. py:data:: BinT

   The type of the value being binned.

.. py:data:: BinNameT

   The type of the bin name column.



Classes
=======


   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: BinningSpec(bin_edges, names = None, right = True, include_both_endpoints = True, nan_bin = None)


   Bases: :py:obj:`Generic`\ [\ :py:obj:`BinT`\ , :py:obj:`BinNameT`\ ]

   A spec object defining an operation where values are assigned to bins.

   A BinningSpec divides values into bins based on a list of bin edges, for use
   with the :meth:`~tmlt.analytics.query_builder.QueryBuilder.bin_column` method.
   All :data:`supported data types <tmlt.analytics.session.SUPPORTED_SPARK_TYPES>`
   can be binned using a BinningSpec.

   Values outside the range of the provided bins and ``None`` types are all
   mapped to ``None`` (``null`` in Spark), as are NaN values by default. Bin
   names are generated based on the bin edges, but custom names can be provided.

   By default, the right edge of each bin is included in that bin: using edges
   `[0, 5, 10]` will lead to bins `[0, 5]` and `(5, 10]`. To include the
   left edge instead, set the ``right`` parameter to False.

   .. rubric:: Examples

   >>> spec = BinningSpec([0,5,10])
   >>> spec.bins()
   ['[0, 5]', '(5, 10]']
   >>> spec(0)
   '[0, 5]'
   >>> spec(5)
   '[0, 5]'
   >>> spec(6)
   '(5, 10]'
   >>> spec(10)
   '(5, 10]'
   >>> spec(11) is None
   True






   .. py:property:: input_type
      :type: tmlt.analytics._schema.ColumnType

      Return the ColumnType of the column this binning can be applied to.

   .. py:property:: column_descriptor
      :type: tmlt.analytics._schema.ColumnDescriptor

      Return the ColumnDescriptor that results from applying this binning.


   .. automethod:: __init__
   .. py:method:: __eq__(other)

      Adds equality comparison to the BinningSpec class.


   .. py:method:: bins(include_null = False)

      Return a list of all the bin names that could result from the binning.

      The returned list is guaranteed to contain unique elements, even if
      multiple bins were mapped to the same name. The NaN bin, if one was
      specified, is included. If ``include_null`` is true, the null bin is
      included as well; by default, it is not included.


   .. py:method:: __call__(val)

      Given a value to bin, return its bin name.

      In most cases this method only needs to be used internally, but it can
      be called on its own to test the binning that will be performed.

      :param val: The value to be assigned to a bin.







